# mod

./: .travis.yml  LICENSE  README.md  cabal.haskell-ci  changelog.md  mod.cabal
.github/workflows/: ci.yml  haskell-ci.yml  other.yml
Data/: Mod.hs
Data/Mod/: Compat.hs  Word.hs
bench/: Bench.hs
test/: Test.hs
